--- a/Electron/package.json
+++ b/Electron/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@noble/hashes": "^1.7.0",
+    "@scure/bip32": "^1.6.1",
+    "@scure/bip39": "^1.5.1",
+    "bip39": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.2"
