--- a/Electron/package.json
+++ b/Electron/package.json
@@ -18,7 +18,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.2",
-    "@scure/bip39": "^3.0.0",
+   "@scure/bip39": "^1.5.4"
+,
 "ed25519-hd-key": "^1.2.0",
 "@solana/web3.js": "^1.73.0",
 "tweetnacl": "^1.0.4",
